--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
+    "build": "webpack",
     "start": "node src/server/index.js",
     "build-prod": "webpack --config webpack.prod.js",
     "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
@@ -12,7 +14,6 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "css-loader":"^6.10.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "jest": "^29.7.0",
@@ -25,13 +26,20 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "babel-loader": "^9.2.1",
+    "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-transform-css": "^6.0.1",
     "mini-css-extract-plugin": "^2.9.2",
     "node-sass": "^9.0.0",
-    "sass-loader": "^16.0.3",
+    "sass": "^1.83.0",
+    "sass-loader": "^16.0.4",
     "style-loader": "^4.0.0",
-    "webpack-dev-server": "^5.1.0"
+    "supertest": "^7.0.0",
+    "url-loader": "^4.1.1",
+    "webpack-dev-server": "^5.1.0",
+    "workbox-webpack-plugin": "^7.3.0"
   }
 }
